--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,4 +26,5 @@ CHANGES IN 6.20 (since 6.10)
 -  fixed error when all monsters in control module are "None"
 -  fixed map header lumps having size 1 instead of 0
 -  fixed creating "arch with step" when steepness == NONE
+-  fixed using key podiums underneath a 3D floor
 
