CHANGELOG : minor rewording

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,9 +2,9 @@
 CHANGES IN 6.20 (since 6.10)
 ============================
 
-+  added some basic monster closets
++  added basic monster closets
 
-+  re-implemented some diagonal walls
++  re-implemented diagonal walls
 
 +  new Gameplay Tweaks module
    (can prevent monsters in start room, among other things)
@@ -21,7 +21,7 @@ CHANGES IN 6.20 (since 6.10)
 -  ability to set the random seed
 -  in co-op mode prefer steep stairs instead of lifts
 -  better monster selection via new 'min_weapon' field
--  water is no longer damaging
+-  water and blood are no longer damaging
 
 -  fixed error when all monsters in control module are "None"
 -  fixed map header lumps having size 1 instead of 0
